--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
             <li><a href="https://www.twitch.tv/offgin">twitch</a></li>
         </ul>
     </footer>
-    <script src="Script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
+
